# python-template

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/python_template/: __init__.py  main.py
tests/: test_main.py
