[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratik",email = "pratik.a.hublikar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
black = "^25.1.0"
mypy = "^1.17.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
